# ImgView

./: .clang-format  .gitignore  .vimspector.json  CMakeLists.txt  README.md  img_view.qrc
src/: book.cc  book.h  book_info.cc  book_info.h  canvas.cc  canvas.h  debug.cc  debug.h  display.cc  display.h  drawing_board.cc  drawing_board.h  image_info.cc  image_info.h  img_area.cc  img_area.h  img_info.cc  img_info.h  img_view.cc  img_view.h  logger.cc  logger.h  lru_cache.cc  lru_cache.h  main.cc  main_window.cc  main_window.h  options.cc  options.h  paper.cc  paper.h
src/ui/: img_view_ui.cc  img_view_ui.h  main_window_ui.cc  main_window_ui.h
